@@ -7,6 +7,11 @@ cdebconf (0.140) UNRELEASED; urgency=low
   * src/template.c (remove_newlines): Fix the removal of trailing
     newline for descriptions ending with a verbatim block. This helps
     optimizing the screen usage in the newt frontend.
+  * Fix the computation and usage of the window's height. If the height is not
+    computed correctly, the newt frontend may decide to put the input box and
+    the explanatory text on the same window, but the text will overlap on the
+    input box, which renders the input impossible.
+    Closes: #508042, #507372, #343119
 
  -- Frans Pop <fjp@debian.org>  Sun, 05 Apr 2009 00:43:10 +0200
 
